fix: update text-wrap

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -38,9 +38,6 @@ body {
   font-family: var(--font-body);
   font-size: clamp(0.875rem, 0.5vw + 0.5rem, 1.25rem);
   line-height: calc(1em + 0.7rem);
-
-  // text-wrap: pretty is not on firefox yet
-  text-wrap: balance;
   text-wrap: pretty;
 }
 
